Bug 467546 - Brush cursors are not consistent with toolbox icons
Summary: Brush cursors are not consistent with toolbox icons
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.1.5
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-18 22:30 UTC by Nagy Tibor
Modified: 2023-10-04 09:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Toolbar icons vs. Tool cursors (29.79 KB, image/png)
2023-03-18 22:30 UTC, Nagy Tibor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nagy Tibor 2023-03-18 22:30:06 UTC
Created attachment 157404 [details]
Toolbar icons vs. Tool cursors

SUMMARY
The brush cursors icons that Krita displays when using various tools on the canvas
are kinda a mess right now. Would be nice having them cleaned up or redrawn.

STEPS TO REPRODUCE
1. Set "Configure Krita..." -> "General" -> "Cursor" -> "Brush Cursor Icon" to "Tool Icon"
2. Select mentioned tools below and hover the canvas.

ISSUES
- Edit Shapes Tool:
    Uses a custom narrow cursor instead of the system cursor any other tool uses
    in similar cases.

- Freehand Brush Tool, Polygon Tool, Crop Tool, Polygonal Selection Tool:
    Cursor uses obsolete icon from Krita 2.x

- Dynamic Brush Tool, Multibrush Brush Tool, Colorize Mask Tool:
    Reuses the obsolete Freehand Brush cursor.

- Freehand Selection Tool:
    The bean is much thicker on the cursor than the toolbar icon. Also no other
    custom cursor gives the pointer a tail.

- Line Tool:
    The angle of the line is different between the cursor and the toolbar icon.

- Ellipse Tool, Elliptical Selection Tool:
    Cursor is too oval compared to the toolbar icon.

- Polyline Tool:
    Lines on the cursor intersect sooner than on the toolbar icon.

- Smart Patch Tool:
    Missing cursor.

- Fill Tool:
    Weird Windows 9x-style paint bucket cursor, very different from the current
    toolbar icon.

- Sample Color Tool, Similar Color Selection Tool:
    Both of them use an eyedropper icon, however they are inconsistent with each
    other. The crosshair positions and eyedropper shapes are different.

- Zoom Tool:
    The only cursor using 2px wide outlines.

- Magnetic Curse Selection Tool:
    Magnet faces the opposite direction than on the toolbar icon.

- Calligraphy Tool, Distance Measurement Tool:
    Both of them use a crosshair cursor, however they are inconsistent with each
    other. One of the uses a system cursor, the other one uses a custom bitmap.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.1
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Graphics Platform: X11
Comment 1 Halla Rempt 2023-03-30 18:28:22 UTC
Please create and submit new cursors. Very few people actually use the icon cursor option, so it's not a priority to update the cursors.
Comment 2 Dmitry Kazakov 2023-10-04 09:28:24 UTC
Git commit c1db5c52dca31df2ffdd626889169c9acbb296a1 by Dmitry Kazakov, on behalf of liquidex woźniak.
Committed on 04/10/2023 at 11:28.
Pushed by dkazakov into branch 'master'.

Edit shapes tool: make cursors more accessible on black background

Reasons
- the cursors are not visible at all against a dark background because they're pure black
- the cursors are hard to read because they're very small and narrow

I've redesigned the cursors to be bigger and wider and have a white outline, 
while trying to keep the original ones' general idea.
Related: bug 475203

M  +2    -0    libs/flake/flake.qrc
A  +-    --    libs/flake/pics/32-cursor-needle-move.png
A  +-    --    libs/flake/pics/32-cursor-needle.png
A  +17   -0    libs/flake/pics/cursor-needle-move.svg
A  +15   -0    libs/flake/pics/cursor-needle.svg
M  +2    -46   libs/flake/tools/KoPathTool.cpp

https://invent.kde.org/graphics/krita/-/commit/c1db5c52dca31df2ffdd626889169c9acbb296a1
Comment 3 Dmitry Kazakov 2023-10-04 09:29:00 UTC
Git commit 9f03bf60db8b0c73378f2e14e9172dfcf464d242 by Dmitry Kazakov, on behalf of liquidex woźniak.
Committed on 04/10/2023 at 11:28.
Pushed by dkazakov into branch 'krita/5.2'.

Edit shapes tool: make cursors more accessible on black background

Reasons
- the cursors are not visible at all against a dark background because they're pure black
- the cursors are hard to read because they're very small and narrow

I've redesigned the cursors to be bigger and wider and have a white outline, 
while trying to keep the original ones' general idea.
Related: bug 475203


(cherry picked from commit c1db5c52dca31df2ffdd626889169c9acbb296a1)

M  +2    -0    libs/flake/flake.qrc
A  +-    --    libs/flake/pics/32-cursor-needle-move.png
A  +-    --    libs/flake/pics/32-cursor-needle.png
A  +17   -0    libs/flake/pics/cursor-needle-move.svg
A  +15   -0    libs/flake/pics/cursor-needle.svg
M  +2    -46   libs/flake/tools/KoPathTool.cpp

https://invent.kde.org/graphics/krita/-/commit/9f03bf60db8b0c73378f2e14e9172dfcf464d242