Edit shapes tool: make cursors more accessible on black background

Reasons
- the cursors are not visible at all against a dark background because they're pure black
- the cursors are hard to read because they're very small and narrow

I've redesigned the cursors to be bigger and wider and have a white outline, 
while trying to keep the original ones' general idea.

BUG:467546
BUG:475203


(cherry picked from commit c1db5c52dca31df2ffdd626889169c9acbb296a1)